# MMMSimulator

./: Nowy Dokument tekstowy.txt  Wykres.csv
data/: Wykres.csv
src/: config.py  cpp_backend.cp312-win_amd64.pyd  cpp_backend.cp313-win_amd64.pyd  cpp_backend.pyi  gui.py
src/bindings/: CMakeLists.txt  cpp_backend.cpp  setup.py
src/bindings/cpp_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
venv-MMMSimulator/: pyvenv.cfg
venv-MMMSimulator/Scripts/: activate  activate.bat
